--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,4 @@
 [URL]
-[/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Mobile
-DefaultGraphicsPerformance=Scalable
-
-
 [/Script/Engine.RendererSettings]
 r.MobileHDR=False
 r.Mobile.DisableVertexFog=True
@@ -102,7 +97,7 @@ r.SupportReversedIndexBuffers=True
 r.SupportMaterialLayers=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/Template_Default.Template_Default
+EditorStartupMap=/Game/Maps/GameMap.GameMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -111,13 +106,23 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Entry.Entry
+GameDefaultMap=/Game/Maps/GameMap.GameMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
 bExplicitCanvasChildZOrder=True
+
+[/Script/HardwareTargeting.HardwareTargetingSettings]
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
+DefaultGraphicsPerformance=Scalable
+AppliedDefaultGraphicsPerformance=Scalable
+
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=com.Sakyapanchen.Tron
+bPackageDataInsideApk=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -164,5 +169,4 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
-
 
