--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -109,7 +109,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/BP_TronGameInstance.BP_TronGameInstance_C
-GameDefaultMap=/Game/Maps/GameMap.GameMap
+GameDefaultMap=/Game/Maps/EntryMap.EntryMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/BP_TronGameMode.BP_TronGameMode_C
 GlobalDefaultServerGameMode=None
@@ -126,6 +126,25 @@ AppliedDefaultGraphicsPerformance=Scalable
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.Sakyapanchen.Tron
 bPackageDataInsideApk=True
+TargetSDKVersion=9
+MinSDKVersion=9
+bUseExternalFilesDir=False
+AntVerbosity=Quiet
+bFullScreen=True
+bBuildForArm64=True
+bSupportsVulkan=True
+KeyStore=UE.keystore
+KeyAlias=DistroKey
+KeyStorePassword=codesigner
+bCreateAllPlatformsInstall=False
+bBuildForES2=True
+bBuildForES31=True
+StoreVersion=13
+ApplicationDisplayName=Tron
+DepthBufferPreference=Bits32
+
+[/Script/Engine.UserInterfaceSettings]
+UIScaleCurve=(EditorCurveData=(Keys=((Time=-17.192993,Value=-0.183147),(),(Time=2158.000000,Value=2.000000)),PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -172,3 +191,5 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
+
+
