--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1C4F4A13465F5DE516E9518BC5D5F447
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+IncludeCrashReporter=True
+bCookAll=True
+bCookMapsOnly=False
+bCompressed=True
+
