--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -112,7 +112,7 @@ GameInstanceClass=/Game/Blueprints/BP_TronGameInstance.BP_TronGameInstance_C
 GameDefaultMap=/Game/Maps/EntryMap.EntryMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/BP_TronGameMode.BP_TronGameMode_C
-GlobalDefaultServerGameMode=None
+GlobalDefaultServerGameMode=/Game/Blueprints/BP_TronGameMode.BP_TronGameMode_C
 
 [/Script/Slate.SlateSettings]
 bExplicitCanvasChildZOrder=True
